# backitup

./: .gitignore  README.md  backitup.py  config.yaml  main.py  prompts.txt  pyproject.toml  test_backup_agent.py
doc/: index.html
docs/: index.html
website/css/: styles.css
website/js/: script.js
